<resources>
    <string name="app_name"></string>
    <string name="activity_usuario">Crear usuario</string>
    <string name="lb_Iniciar_sesion">Iniciar sesión</string>
    <string name="lb_Registrarse">Registrarse</string>
    <string name="lb_Modificar_perfil">Modificar perfil</string>
    <string name="lb_Añadir_mascota">Añadir mascota</string>
    <string name="lb_Modificar_mascota">Modificar mascota</string>
    <string name="lb_Tamano">Tamaño</string>
    <string name="lb_Apodo">Apodo</string>
    <string name="lb_Mascota">¿Que es tu mascota?</string>
    <string name="lb_Amistoso">Amistoso</string>
    <string name="lb_fotos">Sube fotos de tu mascota</string>
    <string name="lb_btRegistrar">Registrar</string>
    <string name="lb_Desconectarse">Desconectarse</string>
    <string name="lb_Usuario">Usuario</string>
    <string name="lb_Contrasena">Contraseña</string>
    <string name="lb_email">e-mail</string>
    <string name="lb_Pais">País</string>
    <string name="lb_Ciudad">Ciudad</string>
    <string name="lb_btModificar">Modificar</string>
    <string name="lb_btModificarM">Modificar</string>
    <string name="lb_Mapa">Zonas de paseo</string>
    <string name="lb_Eliminar_mascota">Eliminar mascota</string>
    <string name="lb_anadir_opinion">Añadir opinión</string>
    <string name="lb_titulo">Título</string>
    <string name="lb_Opinion">Escribe aquí tu opinión</string>
    <string name="lb_puntuacion">Puntuación</string>
    <string name="lb_Guardar">Guardar</string>
    <string name="lb_ajustes">Ajustes</string>
    <string name="lb_acercade">Acerca de</string>
    <string name="lb_Idioma">Idioma</string>
    <string name="lb_empresa">Juan S.L</string>
    <string name="lb_direccion">Whistler Columbia Británica Canadá</string>
    <string name="lb_creado">Creado por Juan Dies</string>
    <string name="lb_derechos">2016 RedFox Inc. Todos los derechos reservados ©</string>
    <string name="lb_empresaFox">RedFox S.L</string>
    <string name="lb_btVerOpiniones">Ver opiniones</string>
    <string name="app_nombre">RedFox</string>
    <string name="lb_usuario">Usuario:</string>
    <string name="lb_usuarioUtil">Usuario :</string>
    <string name="lb_contraseña">Contraseña :</string>
    <string name="lb_Iniciarsesion">Iniciar sesión</string>
    <string name="lb_bienvenida">BIENVENIDO A REDFOX</string>
    <string name="lb_registro">Usuario registrado correctamente ;)</string>
    <string name="lb_Adelante">Adelante!</string>
    <string name="lb_seleccion">Seleccione un país</string>
    <string name="lb_spain">España</string>
    <string name="lb_england">Inglaterra</string>
    <string name="lb_gato">Gato</string>
    <string name="lb_perro">Perro</string>
    <string name="lb_zorro">Zorro</string>
    <string name="lb_grande">Grande</string>
    <string name="lb_mediano">Mediano</string>
    <string name="lb_pequeno">Pequeño</string>
    <string name="lb_language">Seleccione un idioma</string>
    <string name="lb_mascotast">Mascotas</string>
    <string name="lb_ip_server">Introduce la ip del server</string>
    <string name="lb_ip">Ip del server</string>
    <string name="lb_btAceptar">Aceptar</string>
    <string name="lb_cuidado">Cuidado: Acuerdate de cambiar la ip arriba en ajustes!</string>
    <string name="lb_titulo1">Zona de paseo con correa</string>
    <string name="lb_titulo2">Zona de paseo sin correa</string>
    <string name="lb_desc1">Jardines para pasear a su mascota, recuerde recoger la caca por favor</string>
    <string name="lb_desc2">Parque extenso con muchas zonas verdes</string>
    <string name="lb_desc3">Zona agradable y extensa donde pasear a su perro, tenga precaución hay siluros de dos metros que pueden comerse a su mascota</string>
    <string name="lb_falta">Falta por rellenar </string>
    <string name="lb_mal">La puntuación no es válida</string>
</resources>
