<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acercade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joan.ra1.Acercade">

    <TextView
        android:text="@string/lb_Idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView7" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:id="@+id/spIdioma" />

    <TextView
        android:text="@string/lb_empresaFox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/spIdioma"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lb_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lb_creado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="106dp" />

    <TextView
        android:text="@string/lb_derechos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView15"
        android:layout_marginTop="19dp"
        android:id="@+id/textView8"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView11"
        android:layout_alignStart="@+id/textView15" />

    <Button
        android:text="@string/lb_btVerOpiniones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:id="@+id/btOpinion"
        android:layout_above="@+id/textView15"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
