<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_anadir_opinion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joan.ra1.AnadirOpinion">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTitulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:hint="@string/lb_titulo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etTexto"
        android:layout_below="@+id/etTitulo"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:minLines="4"
        android:hint="@string/lb_Opinion" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etPuntuacion"
        android:layout_below="@+id/etTexto"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:hint="@string/lb_puntuacion"
        android:layout_alignEnd="@+id/btGuardar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_Guardar"
        android:id="@+id/btGuardar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
