<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mascota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joan.ra1.Mascota">

    <TextView
        android:text="@string/lb_Apodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:layout_alignBaseline="@+id/etApodo"
        android:layout_alignBottom="@+id/etApodo"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lb_Tamano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTamano"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:layout_alignBottom="@+id/spTamano"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etApodo"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tvMascota" />

    <TextView
        android:text="@string/lb_Mascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMascota"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:layout_alignTop="@+id/spMascota"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/lb_Amistoso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/cbAmistoso"
        android:fontFamily="casual"
        android:checked="false"
        android:layout_below="@+id/tvTamano"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lb_fotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:layout_below="@+id/cbAmistoso"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:id="@+id/ibImagen"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/lb_btRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        android:id="@+id/ivImagen"
        android:layout_below="@+id/textView12"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btRegistrar" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spMascota"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/etApodo"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvMascota" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spTamano"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/tvMascota"
        android:layout_toEndOf="@+id/tvMascota" />
</RelativeLayout>
