<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modificar_usuario.xml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joan.ra1.ModificarUsuario">

    <TextView
        android:text="@string/lb_Usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/etUsuario"
        android:layout_alignBottom="@+id/etUsuario"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etCntrasena"
        android:layout_below="@+id/etUsuario"
        android:layout_toEndOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_below="@+id/etCntrasena"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:text="@string/lb_Pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPais"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spPais"
        android:layout_alignBottom="@+id/tvPais"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/etEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etCiudad"
        android:layout_below="@+id/spPais"
        android:layout_alignStart="@+id/spPais" />

    <Button
        android:text="@string/lb_btModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCiudad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:id="@+id/btModificar"
        android:fontFamily="casual" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etUsuario"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etCntrasena" />

    <TextView
        android:text="@string/lb_Contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/etCntrasena"
        android:layout_alignBottom="@+id/etCntrasena"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lb_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/etEmail"
        android:layout_alignBottom="@+id/etEmail"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lb_Ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:textAlignment="center"
        android:id="@+id/tvCiudad"
        android:layout_alignBaseline="@+id/etCiudad"
        android:layout_alignBottom="@+id/etCiudad"
        android:layout_alignParentStart="true" />

</RelativeLayout>